--- a/example-tycho-two-root/example-tycho-two-huhu-tests/build.properties
+++ b/example-tycho-two-root/example-tycho-two-huhu-tests/build.properties
@@ -1,6 +1,3 @@
-source.. = src/test/resources/,\
-           src/main/java/,\
-           src/test/java/,\
-           src/main/resources/
+source.. = src/
 bin.includes = META-INF/,\
                .
