--- a/example-tycho-two-root/example-tycho-two-huhu/build.properties
+++ b/example-tycho-two-root/example-tycho-two-huhu/build.properties
@@ -1,7 +1,4 @@
-source.. = src/main/java/,\
-           src/main/resources/,\
-           src/test/java/,\
-           src/test/resources/
+source.. = src/
 output.. = target/classes
 bin.includes = META-INF/,\
                .
